--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "sass": "^1.51.0",
     "web-vitals": "^2.1.4"
