--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "firebase": "^9.8.4",
     "framer-motion": "^6.3.10",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
